# rovdex

./: .gitignore  Cargo.toml  LICENSE  README.md  install
.github/workflows/: ci.yml  desktop.yml  package.yml
assets/icons/: Rovdex.icns
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  app_paths.rs  auth.rs  config.rs  context.rs  engine.rs  lib.rs  message.rs  provider.rs  session.rs  session_store.rs  task.rs  tool.rs  tools.rs  workspace_map.rs
crates/desktop/: README.md  package-lock.json  package.json
crates/desktop/src/: App.tsx  index.css
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
docs/: RELEASE_TEMPLATE.md
scripts/: generate_icons.sh  generate_icons.swift  package-windows-msi.ps1  package.sh
