[workspace]
members = [
  "crates/cli",
  "crates/core",
  "crates/tui",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/pivotf/rovdex.git"
homepage = "https://github.com/pivotf/rovdex.git"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
glob = "0.3"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
walkdir = "2"
winres = "0.1"
