[package]
name = "rovdex-cli"
version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rovdex-core = { path = "../core" }
rovdex-tui = { path = "../tui" }

[build-dependencies]
winres.workspace = true
